Basic Height Comparison

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,10 @@
     <title>NBA Comparison</title>
 </head>
 <body>
+    <form action="basic_comparison" method="post">
+        <h2>Height</h2>
+        <input type="text" name="height">
+        <input type="submit" value="send">
+    </form>
 </body>
 </html>
