--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <form action="basic_comparison" method="post">
+        <h2>Position</h2>
+        <input type="text" name="position">
         <h2>Height</h2>
         <input type="text" name="height">
         <input type="submit" value="send">
